--- a/homepage.css
+++ b/homepage.css
@@ -9,7 +9,7 @@
     background-color: #222831;
     padding: 50px;
     margin-left: 60px;
-    box-shadow: 0 0 10px black;
+    box-shadow: 0 0 5px black;
 }
 
 .header-text {
@@ -47,7 +47,7 @@ body {
     background: #222831;
     padding-top: 10px;
     transition: 0.6s ease;
-    box-shadow: 0 0 10px black;
+    box-shadow: 0 0 5px black;
     overflow-x: hidden;
 }
 
@@ -108,4 +108,13 @@ body {
     letter-spacing: 0.6px;
     font-weight: 55 0;
     text-transform: uppercase;
+}
+
+.content {
+    background-color: #d6d3d3;
+    height: 605px;
+    margin-top: 25px;
+    margin-left: 100px;
+    border-radius: 5px;
+    box-shadow: 0 0 3px black;
 }
