--- a/homepage.css
+++ b/homepage.css
@@ -1,111 +1,111 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "poppins", sans-serif;
 }
 
 .header {
-    background-color: #222831;
-    padding: 50px;
-    margin-left: 60px;
-    box-shadow: 0 0 10px black;
+  background-color: #222831;
+  padding: 47px;
+  margin-left: 60px;
+  box-shadow: 0 0 10px black;
 }
 
 .header-text {
-    position: fixed;
-    right: 100px;
-    top: 40px;
-    height: 60px;
-    font-size: 22px;
-    letter-spacing: 0.6px;
-    font-weight: 55 0;
-    text-transform: uppercase;
-    color: #EEEEEE;
+  position: fixed;
+  right: 100px;
+  top: 40px;
+  height: 60px;
+  font-size: 22px;
+  letter-spacing: 0.6px;
+  font-weight: 55 0;
+  text-transform: uppercase;
+  color: #eeeeee;
 }
 
 .header-icon {
-    position: fixed;
-    right: 0;
-    top: 20px;
-    color: #EEEEEE;
-    height: 60px;
-    min-width: 75px;
-    font-size: 50px;
+  position: fixed;
+  right: 0;
+  top: 20px;
+  color: #eeeeee;
+  height: 60px;
+  min-width: 75px;
+  font-size: 50px;
 }
 
 body {
-    background: #EEEEEE;
+  background: #eeeeee;
 }
 
 .sidebar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 74px;
-    background: #222831;
-    padding-top: 10px;
-    transition: 0.6s ease;
-    box-shadow: 0 0 10px black;
-    overflow-x: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 74px;
+  background: #222831;
+  padding-top: 10px;
+  transition: 0.6s ease;
+  box-shadow: 0 0 10px black;
+  overflow-x: hidden;
 }
 
 .sidebar:hover {
-    width: 350px;
-    transition: 0.6s ease;
+  width: 350px;
+  transition: 0.6s ease;
 }
 
-.sidebar>ul {
-    position: relative;
-    height: 97vh;
+.sidebar > ul {
+  position: relative;
+  height: 97vh;
 }
 
-.sidebar>ul>li {
-    list-style: none;
-    margin: 5px 0;
+.sidebar > ul > li {
+  list-style: none;
+  margin: 5px 0;
 }
 
-.sidebar>ul>li:hover {
-    background: #00ADB5;
-    transition: 0.3s ease;
+.sidebar > ul > li:hover {
+  background: #00adb5;
+  transition: 0.3s ease;
 }
 
-.sidebar>ul>li>a {
-    position: relative;
-    display: flex;
-    white-space: nowrap;
-    text-decoration: none;
-    color: #EEEEEE;
+.sidebar > ul > li > a {
+  position: relative;
+  display: flex;
+  white-space: nowrap;
+  text-decoration: none;
+  color: #eeeeee;
 }
 
 .logo {
-    margin-bottom: 80px;
+  margin-bottom: 80px;
 }
 
-.sidebar>ul>li:last-child {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
+.sidebar > ul > li:last-child {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 
 .icon {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 60px;
-    min-width: 75px;
-    font-size: 22px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60px;
+  min-width: 75px;
+  font-size: 22px;
 }
 
 .text {
-    position: relative;
-    display: flex;
-    align-items: center;
-    height: 60px;
-    font-size: 17px;
-    letter-spacing: 0.6px;
-    font-weight: 55 0;
-    text-transform: uppercase;
+  position: relative;
+  display: flex;
+  align-items: center;
+  height: 60px;
+  font-size: 17px;
+  letter-spacing: 0.6px;
+  font-weight: 55 0;
+  text-transform: uppercase;
 }
