--- a/login.css
+++ b/login.css
@@ -54,7 +54,7 @@ input {
 input:focus {
     background-color: transparent;
     outline: transparent;
-    border-bottom: 2px solid rgb(127, 188, 241);
+    border-bottom: 2px solid #00ADB5;
 }
 
 input::placeholder {
@@ -73,7 +73,7 @@ label {
 input:focus~label,
 input:not(:placeholder-shown)~label {
     top: -2.7em;
-    color: rgb(127, 188, 241);
+    color: #00ADB5;
     font-size: 15px;
 }
 
@@ -84,18 +84,18 @@ input:not(:placeholder-shown)~label {
     outline: none;
     border: none;
     width: 100%;
-    background: rgb(125, 125, 235);
+    background: #00ADB5;
     color: white;
     cursor: pointer;
     transition: 0.9s;
 }
 
 .button:hover {
-    background: #cbbff2;
+    background: #EEEEEE;
 }
 
 button {
-    color: rgb(125, 125, 235);
+    color: #00ADB5;
     border: none;
     background-color: transparent;
     font-size: 1rem;
@@ -119,7 +119,7 @@ button:hover {
 }
 
 .recover>a:hover {
-    color: rgb(127, 188, 241);
+    color: #00ADB5;
 }
 
 img {
@@ -143,7 +143,7 @@ img {
 }
 
 .form {
-    background-color: #4654e1;
+    background-color: #00ADB5;
     width: 300px;
     height: 44px;
     border-radius: 5px;
