--- a/login.css
+++ b/login.css
@@ -1,153 +1,159 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "poppins", sans-serif;
 }
 
 body {
-    background: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
-    height: 553px;
+  background: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
+  height: 553px;
 }
 
 .container {
-    background: #fff;
-    width: 450px;
-    padding: 1.5rem;
-    margin: 200px auto;
-    border-radius: 10px;
-    box-shadow: 0 10px 35px #757575;
+  background: #fff;
+  width: 450px;
+  padding: 1.5rem;
+  margin: 200px auto;
+  border-radius: 10px;
+  box-shadow: 0 10px 35px #757575;
 }
 
 form {
-    margin: 0 2rem;
+  margin: 0 2rem;
 }
 
 .form-title {
-    font-size: 1.5rem;
-    font-weight: bold;
-    text-align: center;
-    padding: 1.3rem;
-    margin-bottom: 0.5rem;
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-align: center;
+  padding: 1.3rem;
+  margin-bottom: 0.5rem;
 }
 
 input {
-    color: inherit;
-    width: 100%;
-    background-color: transparent;
-    border: none;
-    border-bottom: 1px solid #757575;
-    padding-left: 1.5rem;
-    font-size: 15px;
+  color: inherit;
+  width: 100%;
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid #757575;
+  padding-left: 1.5rem;
+  font-size: 15px;
 }
 
 .input-group {
-    padding: 1% 0;
-    position: relative;
+  padding: 1% 0;
+  position: relative;
 }
 
-.input-group>i {
-    position: absolute;
-    color: black;
+.input-group > i {
+  position: absolute;
+  color: black;
 }
 
 input:focus {
-    background-color: transparent;
-    outline: transparent;
-    border-bottom: 2px solid rgb(127, 188, 241);
+  background-color: transparent;
+  outline: transparent;
+  border-bottom: 2px solid rgb(127, 188, 241);
 }
 
 input::placeholder {
-    color: transparent;
+  color: transparent;
 }
 
 label {
-    color: #757575;
-    position: relative;
-    left: 1.2em;
-    top: -1.3em;
-    cursor: auto;
-    transition: 0.3s ease;
+  color: #757575;
+  position: relative;
+  left: 1.2em;
+  top: -1.3em;
+  cursor: auto;
+  transition: 0.3s ease;
 }
 
-input:focus~label,
-input:not(:placeholder-shown)~label {
-    top: -2.7em;
-    color: rgb(127, 188, 241);
-    font-size: 15px;
+input:focus ~ label,
+input:not(:placeholder-shown) ~ label {
+  top: -2.7em;
+  color: rgb(127, 188, 241);
+  font-size: 15px;
 }
 
 .button {
-    font-size: 1.1rem;
-    padding: 8px 0;
-    border-radius: 5px;
-    outline: none;
-    border: none;
-    width: 100%;
-    background: rgb(125, 125, 235);
-    color: white;
-    cursor: pointer;
-    transition: 0.9s;
+  font-size: 1.1rem;
+  padding: 8px 0;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+  width: 100%;
+  background: rgb(125, 125, 235);
+  color: white;
+  cursor: pointer;
+  transition: 0.9s;
 }
 
 .button:hover {
-    background: #cbbff2;
+  background: #cbbff2;
 }
 
 button {
-    color: rgb(125, 125, 235);
-    border: none;
-    background-color: transparent;
-    font-size: 1rem;
-    font-weight: bold;
+  color: rgb(125, 125, 235);
+  border: none;
+  background-color: transparent;
+  font-size: 1rem;
+  font-weight: bold;
 }
 
 button:hover {
-    text-decoration: underline;
-    color: black;
+  text-decoration: underline;
+  color: black;
 }
 
 .recover {
-    padding-top: 20px;
-    text-align: right;
+  padding-top: 20px;
+  text-align: right;
 }
 
-.recover>a {
-    text-decoration: none;
-    color: black;
-    font-weight: 200;
+.recover > a {
+  text-decoration: none;
+  color: black;
+  font-weight: 200;
 }
 
-.recover>a:hover {
-    color: rgb(127, 188, 241);
+.recover > a:hover {
+  color: rgb(127, 188, 241);
 }
 
 img {
-    width: 250px;
-    height: auto;
-    margin-left: 80px;
+  width: 250px;
+  height: auto;
+  margin-left: 80px;
 }
 
 .fa-eye {
-    position: fixed;
-    right: 5px;
-    top: 0.5px;
-    padding-top: 5px;
+  position: fixed;
+  right: 5px;
+  top: 0.5px;
+  padding-top: 5px;
 }
 
 .fa-eye-slash {
-    position: fixed;
-    right: 5px;
-    top: 0.5px;
-    padding-top: 5px;
+  position: fixed;
+  right: 5px;
+  top: 0.5px;
+  padding-top: 5px;
 }
 
 .form {
-    background-color: #4654e1;
-    width: 300px;
-    height: 44px;
-    border-radius: 5px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+  background-color: #4654e1;
+  width: 300px;
+  height: 44px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.error-message {
+  color: red;
+  font-size: 14px;
+  display: block;
+  margin-top: 5px;
 }
