--- a/home/login.css
+++ b/home/login.css
@@ -46,7 +46,7 @@ input {
   position: relative;
 }
 
-.input-group > i {
+.input-group>i {
   position: absolute;
   color: black;
 }
@@ -70,8 +70,8 @@ label {
   transition: 0.3s ease;
 }
 
-input:focus ~ label,
-input:not(:placeholder-shown) ~ label {
+input:focus~label,
+input:not(:placeholder-shown)~label {
   top: -2.7em;
   color: #00adb5;
   font-size: 15px;
@@ -112,13 +112,13 @@ button:hover {
   text-align: right;
 }
 
-.recover > a {
+.recover>a {
   text-decoration: none;
   color: black;
   font-weight: 200;
 }
 
-.recover > a:hover {
+.recover>a:hover {
   color: #00adb5;
 }
 
@@ -151,8 +151,11 @@ img {
   flex-direction: row;
   align-items: center;
 }
+
 .error-message {
   color: red;
   font-weight: bold;
-  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  padding-bottom: 7px;
 }
