--- a/home/login.css
+++ b/home/login.css
@@ -39,6 +39,7 @@ input {
   border-bottom: 1px solid #757575;
   padding-left: 1.5rem;
   font-size: 15px;
+  margin-bottom: 20px;
 }
 
 .input-group {
@@ -55,26 +56,6 @@ input:focus {
   background-color: transparent;
   outline: transparent;
   border-bottom: 2px solid #00adb5;
-}
-
-input::placeholder {
-  color: transparent;
-}
-
-label {
-  color: #757575;
-  position: relative;
-  left: 1.2em;
-  top: -1.3em;
-  cursor: auto;
-  transition: 0.3s ease;
-}
-
-input:focus~label,
-input:not(:placeholder-shown)~label {
-  top: -2.7em;
-  color: #00adb5;
-  font-size: 15px;
 }
 
 .button {
