--- a/home/student/student_homepage.css
+++ b/home/student/student_homepage.css
@@ -5,6 +5,10 @@
     font-family: "poppins", sans-serif;
 }
 
+.header-username {
+    font-size: 20px;
+}
+
 .header {
     background-color: #222831;
     padding: 40px;
@@ -27,13 +31,7 @@
 }
 
 .header-icon {
-    position: fixed;
-    right: 200px;
-    top: 20px;
-    color: #EEEEEE;
-    height: 60px;
-    min-width: 75px;
-    font-size: 50px;
+    font-size: 30px;
 }
 
 body {
@@ -114,9 +112,15 @@ body {
 
 .content {
     background-color: #d6d3d3;
-    height: 605px;
-    margin-top: 25px;
-    margin-left: 100px;
+    height: 637px;
+    margin-top: 2px;
+    margin-left: 77px;
     border-radius: 5px;
     box-shadow: 0 0 3px black;
+}
+
+h1 {
+    font-size: 30px;
+    text-align: center;
+    padding-top: 100px;
 }
