--- a/home/teacher/teacher_homepage.css
+++ b/home/teacher/teacher_homepage.css
@@ -5,6 +5,10 @@
     font-family: "poppins", sans-serif;
 }
 
+.header-username {
+    font-size: 20px;
+}
+
 .header {
     background-color: #222831;
     padding: 40px;
@@ -14,9 +18,13 @@
     text-align: right;
 }
 
+.header-icon {
+    font-size: 30px;
+}
+
 .header-text {
     position: fixed;
-    right: 650px;
+    right: 590px;
     top: 40px;
     height: 60px;
     font-size: 22px;
@@ -24,16 +32,6 @@
     font-weight: 55 0;
     text-transform: uppercase;
     color: #EEEEEE;
-}
-
-.header-icon {
-    position: fixed;
-    right: 200px;
-    top: 20px;
-    color: #EEEEEE;
-    height: 60px;
-    min-width: 75px;
-    font-size: 50px;
 }
 
 body {
@@ -45,17 +43,11 @@ body {
     top: 0;
     left: 0;
     height: 100%;
-    width: 74px;
+    width: 290px;
     background: #222831;
     padding-top: 10px;
-    transition: 0.6s ease;
     box-shadow: 0 0 5px black;
-    overflow-x: hidden;
-}
 
-.sidebar:hover {
-    width: 350px;
-    transition: 0.6s ease;
 }
 
 .sidebar>ul {
@@ -114,9 +106,7 @@ body {
 
 .content {
     background-color: #d6d3d3;
-    height: 605px;
-    margin-top: 25px;
-    margin-left: 100px;
-    border-radius: 5px;
+    height: 639px;
+    margin-left: 290px;
     box-shadow: 0 0 3px black;
 }
