--- a/home/student/student_homepage.css
+++ b/home/student/student_homepage.css
@@ -113,10 +113,11 @@ body {
 .content {
     background-color: #d6d3d3;
     height: 637px;
-    margin-top: 2px;
-    margin-left: 77px;
-    border-radius: 5px;
+    margin: 0 auto;
     box-shadow: 0 0 3px black;
+    overflow: auto;
+    margin-left: 77px;
+    margin-top: 2px;
 }
 
 h1 {
@@ -124,3 +125,4 @@ h1 {
     text-align: center;
     padding-top: 100px;
 }
+
